--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 722a225
-	base = 44c3a07
-	trim = 
-	trimbase = 
+	base = 9d7bc52
+	trim = hunter_description
+	trimbase = 44c3a07
