--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 722a225
-	base = 20ecbae
-	trim = 
-	trimbase = 
+	base = f0108a8
+	trim = hunter_gazebo
+	trimbase = 20ecbae
