--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/hunter_description
-	previous = 
-	base = 9d7bc52
+	previous = 9d7bc52
+	base = be8cf7d
 	trim = 
 	trimbase = 
