--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/hunter_description
-	previous = 
-	base = d6f3e5a
+	previous = d6f3e5a
+	base = 767e53d
 	trim = 
 	trimbase = 
