--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/hunter_gazebo
-	previous = 
-	base = f0108a8
+	previous = f0108a8
+	base = 8d5483c
 	trim = 
 	trimbase = 
