--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/hunter_gazebo
-	previous = 
-	base = 4be374f
+	previous = 4be374f
+	base = 39e16d7
 	trim = 
 	trimbase = 
